--- a/docs/style.css
+++ b/docs/style.css
@@ -5,10 +5,15 @@ body {
     background-color: #fafafa;
 }
 
+h1 {
+    margin-top: 0;
+}
+
 .container {
     max-width: 600px;
     margin: 2rem auto;
     padding: 1rem;
+    text-align: center;
 }
 
 label {
@@ -26,7 +31,7 @@ textarea {
 button {
     padding: 0.5rem 1rem;
     font-size: 1rem;
-    margin-right: 0.5rem;
+    margin: 0.5rem 0.25rem;
 }
 
 pre {
