--- a/docs/ponzology/style.css
+++ b/docs/ponzology/style.css
@@ -75,6 +75,18 @@ button:hover {
     color: #080;
 }
 
+.feature-request {
+    margin-top: 2rem;
+}
+
+.feature-request textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1rem;
+}
+
 .nav-header {
     display: flex;
     align-items: center;
@@ -127,5 +139,11 @@ button:hover {
 
     .back-button {
         color: #66aaff;
+    }
+
+    .feature-request textarea {
+        background: #333;
+        color: #fff;
+        border: 1px solid #555;
     }
 }
