--- a/docs/toolz/ponzology/style.css
+++ b/docs/toolz/ponzology/style.css
@@ -12,3 +12,6 @@ header{
 #results{margin-top:1rem;}
 
 #spinner{margin-top:1rem;}
+
+#contract{width:100%;padding:0.5rem;margin-bottom:0.5rem;}
+#fetch{margin-bottom:0.5rem;}
