--- a/docs/toolz/ponzology/style.css
+++ b/docs/toolz/ponzology/style.css
@@ -15,3 +15,5 @@ header{
 
 #contract{width:100%;padding:0.5rem;margin-bottom:0.5rem;}
 #fetch{margin-bottom:0.5rem;}
+#search{margin-bottom:0.5rem;margin-left:0.5rem;}
+.instructions{margin-bottom:0.5rem;font-size:0.9rem;}
