Add margin after search button

--- a/docs/toolz/ponzology/style.css
+++ b/docs/toolz/ponzology/style.css
@@ -14,5 +14,6 @@ header{
 #spinner{margin-top:1rem;}
 
 #contract{width:100%;padding:0.5rem;margin-bottom:0.5rem;}
+#search{margin-bottom:0.5rem;}
 #fetch{margin-bottom:0.5rem;}
 .instructions{margin-bottom:0.5rem;font-size:0.9rem;}
